Add multiple other recipes and bring project to completion

--- a/pages/alfredo.html
+++ b/pages/alfredo.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Alfredo</title>
 </head>
 <body>
     <h1>Chicken Alfredo</h1>
-    <img src="Alfredo.jpg">
-
+    <img src="../images/ChickenAlfredo.jpg">
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>Boneless Chicken Breasts</li>
+        <li>Alfredo Sauce</li>
+        <li>Fettucine Pasta Noodles</li>
+        <li>Appropriate Spices</li>
+    </ul>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Cook chicken</li>
+        <li>Chop up chicken</li>
+        <li>Boil pasta</li>
+        <li>After chicken is cooked and chopped, pour it in with the noodles and pour alfredo sauce over both</li>
+    </ol>
 
 </body>
 </html>
