--- a/pages/index.html
+++ b/pages/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="alfredo.html">Chicken Alfredo</a>
+    <p>
+      <a href="alfredo.html">Chicken Alfredo</a> 
+    </p>
+
+    <p>
+       <a href="macncheese.html">Mac n Cheese</a>
+    </p>
+
+    <p>
+        <a href="PB&J.html">PB&J</a>
+    </p>
 </body>
 </html>
