Neaten some minor details

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>
-      <a href="alfredo.html">Chicken Alfredo</a> 
-    </p>
-
-    <p>
-       <a href="macncheese.html">Mac n Cheese</a>
-    </p>
-
-    <p>
-        <a href="PB&J.html">PB&J</a>
-    </p>
+    <ol>
+        <li>
+      <a href="../odin-recipes/pages/alfredo.html">Chicken Alfredo</a>
+      </li>
+      <li> 
+        <a href="../odin-recipes/pages/macncheese.html">Mac n Cheese</a>
+      </li>
+      <li>
+    <a href="../odin-recipes/pages/PB&J.html">PB&J</a>
+    </li>
+    </ol>
 </body>
 </html>
